--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,8 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:Shitaibin/shitaibin.github.io.git
+  repository:
+    github: git@github.com:Shitaibin/shitaibin.github.io.git
+    coding: git@git.dev.tencent.com:shitaibin/shitaibin.git
   branch: master
 
